# camunda

./: .checkstyle.xml  .clog.toml  .codeowners  .dockerignore  .editorconfig  .fossa.yml  .gitattributes  .gitignore  .golangci.yaml  .hadolint.yaml  .lgtm.yml  .pre-commit-config.yaml  .snyk  .suppressions.xml  .tool-versions  .travis.yml  .whitesource  404.html  AGENTS.md  AGENT_CONTEXT.md  AWS_CD.md  CHANGELOG.md  CI.md  CLAUDE.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CVE-2025-52520-ASSESSMENT.md  Dockerfile  Dockerfile.build  Dockerfile.debian  FEATURE.md  FEATURE_REQUEST_BATCH_MOVE_ANCESTOR_SCOPE.md  FIX_PLAN.md  GRADLE_MIGRATION_CONTEXT.md  HANDLES-INTENT-TODO.md  IMPLEMENTATION.md  IMPLEMENTATION_PLAN.md  INTROSPECTION_IMPLEMENTATION_STATUS.md  INVESTIGATION_FINDINGS.md  (+299 more)
.aws/: .gitignore
.ci/: benchmark.dsl  ci_seed.dsl  db-versions.yml  distro_release.dsl  docker.dsl  job.dsl  long_running_tests.dsl  qa_perf.dsl  release_docs.dsl  release_docs.sh  seed.dsl  settings.xml  slave_disconnected.groovy  stage_docs.dsl  stage_docs.sh
.dependabot/: config.yml
.dev/: .gitignore  AGENTS.md  README.md  c8env
.githooks/: pre-commit  pre-push
.github/: TEST_ORGANIZATION_PLAN.md  actionlint-matcher.json  actionlint.yaml  add-release-comments-to-issues.md  codeql-config.yml  conftest-gha-best-practices.rego  (+18 more)
load-tests/mcp/: README.md  pyproject.toml
load-tests/mcp/src/camunda_load_test_mcp/: __main__.py  dashboard.py  github.py  server.py  state.py
load-tests/mcp/tests/: conftest.py  test_dashboard.py  test_github.py  test_state.py  test_tools.py
(+100897 files in other folders)
