[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "camunda-load-test-mcp"
version = "0.1.0"
description = "MCP server for triggering and managing Camunda load tests"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
camunda-load-test-mcp = "camunda_load_test_mcp.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/camunda_load_test_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.14.0",
]
